# Ejercicios-de-programacion

./: CMakeLists.txt  Estudiante.cpp  Estudiante.h  Persona.cpp  Persona.h  funciones.cpp  main.cpp
